--- a/temporary.css
+++ b/temporary.css
@@ -1,4 +1,4 @@
-
+/* 
   * {
    box-sizing: border-box;
    font-family: 'Kanit', sans-serif;
@@ -171,7 +171,7 @@
 
   body {
     padding-top: 60px;
-    font-family: 'Roboto';
+    font-family: 'Roboto'; */
     text-align: center;
   }
   
