last minute color change

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,7 +194,7 @@ body {
   padding: 14px 80px;
   cursor: pointer;
   color: #fff;
-  background-color: #00A6FF;
+  background-color: rgb(0, 114, 175);
   font-size: 1.5rem;
   font-weight: 100;
   border: 1px solid #fff;
