totally forgot we have to us a CSS library. None of this is technically apart of a library.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,13 +183,15 @@ body {
 <!--CSS BELOW IS SPECIFICALLY FOR BUTTONS--/
 
 body {
+
   padding-top: 60px;
-  font-family: 'Roboto';
   text-align: center;
 }
 
 .color-change {
+
   border-radius: 5px;
+  letter-spacing: 2px;
   font-size: 20px;
   padding: 14px 80px;
   cursor: pointer;
@@ -198,7 +200,6 @@ body {
   font-size: 1.5rem;
   font-weight: 100;
   border: 1px solid #fff;
-  box-shadow: 2px 2px 5px #AFE9FF;
   transition-duration: 0.5s;
   -webkit-transition-duration: 0.5s;
   -moz-transition-duration: 0.5s;
@@ -207,7 +208,6 @@ body {
 .color-change:hover {
   color: #17161e;
   border: 1px solid #17161e;
-  box-shadow: 2px 2px 20px #AFE9FF;
 }
 
 button.color-change {
