--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,13 +11,12 @@
 * {
  box-sizing: border-box;
  font-family: 'Kanit', sans-serif;
+ background: #17161e;
 }
 
 body {
- background: #17161e;
- position: relative;
- font-family: 'Roboto', sans-serif;
- color: #fff;
+ /* background: #17161e; */
+
 }
 
 #namer {
@@ -100,7 +99,6 @@ body {
 #namer-input.serious input {
  letter-spacing: 2px;
  text-transform: uppercase;
- font-family: 'Andada', serif;
  font-weight: 500;
 }
 
@@ -115,50 +113,6 @@ body {
  font-family: 'Permanent Marker', cursive;
  font-size: 40px;
 }
-
-@keyframes shaker {
- 0% {
-  transform: translate(0px, 0px) rotate(0deg);
-  opacity: 0.8;
- }
- 10% {
-  transform: translate(10px, 7px) rotate(-9deg);
-  opacity: 0.6;
- }
- 20% {
-  transform: translate(13px, -19px) rotate(-3deg);
-  opacity: 0.3;
- }
- 30% {
-  transform: translate(-6px, -6px) rotate(2deg);
-  opacity: 0.4;
- }
- 40% {
-  transform: translate(-9px, -18px) rotate(-5deg);
-  opacity: 0.4;
- }
- 50% {
-  transform: translate(10px, -8px) rotate(5deg);
-  opacity: 0.7;
- }
- 60% {
-  transform: translate(-10px, 14px) rotate(-6deg);
-  opacity: 1;
- }
- 70% {
-  transform: translate(10px, 3px) rotate(6deg);
-  opacity: 0.1;
- }
- 80% {
-  transform: translate(-2px, 20px) rotate(-6deg);
-  opacity: 1;
- }
- 90% {
-  transform: translate(-7px, -19px) rotate(2deg);
-  opacity: 0.5;
- }
-}
-
 
 #hastylink {
   position: fixed;
@@ -175,9 +129,6 @@ body {
 #hastylink:hover {
 	opacity: 1
 }
-
-
-
 
 
 <!--CSS BELOW IS SPECIFICALLY FOR BUTTONS--/
@@ -207,7 +158,7 @@ body {
 
 .color-change:hover {
   color: #17161e;
-  border: 1px solid #17161e;
+  border: 1px solid lightslategray;
 }
 
 button.color-change {
@@ -215,3 +166,22 @@ button.color-change {
   -moz-appearance: none;
 }
 
+#reportsBtn {
+
+  float: left;
+}
+
+#settingsBtn {
+
+  float: right;
+}
+
+.columns {
+
+  margin: 50px;
+}
+
+#mainContent {
+
+  margin-top: -100px;
+}
