finally found a good CSS library

--- a/temporary.css
+++ b/temporary.css
@@ -1,193 +1,4 @@
+.columns{
 
-#logoImage {
-
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 125px;
-  zoom: 1;
+  border: 5px solid black;
 }
-
-* {
-box-sizing: border-box;
-font-family: 'Kanit', sans-serif;
-background: #17161e;
-}
-
-body {
-/* background: #17161e; */
-
-}
-
-#namer {
-position: relative;
-max-width: 400px;
-margin: 150px auto 0;
-}
-
-#namer input {
-border: 0;
-border-bottom: 2px solid #1976D2;
-width: 100%;
-font-size: 30px;
-line-height: 35px;
-height: 70px;
-text-align: center;
-padding: 10px;
-background: transparent;
-color: #BBDEFB;
-}
-
-#namer input.shake {
-animation-name: shaker;
-animation-duration: 200ms;
-animation-timing-function: ease-in-out;
-animation-delay: 0s;
-}
-
-#namer input:focus {
-outline: 0;
-color: #BBDEFB;
-}
-
-#namer input::placeholder {
-color: #1976D2;
-}
-
-.namer-controls {
-position: relative;
-display: block;
-height: 30px;
-margin: 20px 0;
-text-align: center;
-opacity: 0.3;
-cursor: not-allowed;
-}
-
-.namer-controls.active {
-opacity: 1;
-cursor: pointer;
-}
-
-.namer-controls div {
-float: left;
-width: 33.33%;
-}
-
-.namer-controls div span {
-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
-padding: 10px 5px;
-width: 95%;
-display: inline-block;
-margin-right: 5%;
-border-radius: 30px;
-font-size: 14px;
-text-transform: uppercase;
-letter-spacing: 0.3px;
-}
-
-.namer-controls div span:last-child {
-margin-right: 0;
-}
-
-.namer-controls div span.active {
-box-shadow: none;
-background-color: #1976D2;
-color: #fff;
-}
-
-#namer-input.serious input {
-letter-spacing: 2px;
-text-transform: uppercase;
-font-weight: 500;
-}
-
-#namer-input.modern input {
-font-family: 'Raleway', sans-serif;
-text-transform: lowercase;
-font-weight: 300;
-letter-spacing: 10px;
-}
-
-#namer-input.cheeky input {
-font-family: 'Permanent Marker', cursive;
-font-size: 40px;
-}
-
-#hastylink {
-position: fixed;
-bottom:5px;
-left: 0;
-right: 0;
-font-size: 14px;
-color: #fff;
-text-decoration: none;
-text-align: center;
-letter-spacing: 1px;
-opacity: 0.5;
-}
-#hastylink:hover {
-opacity: 1
-}
-
-
-<!--CSS BELOW IS SPECIFICALLY FOR BUTTONS--/
-
-body {
-
-padding-top: 60px;
-text-align: center;
-}
-
-.color-change {
-
-border-radius: 5px;
-letter-spacing: 2px;
-font-size: 20px;
-padding: 14px 80px;
-cursor: pointer;
-color: #fff;
-background-color: rgb(0, 114, 175);
-font-size: 1.5rem;
-font-weight: 100;
-border: 1px solid #fff;
-transition-duration: 0.5s;
--webkit-transition-duration: 0.5s;
--moz-transition-duration: 0.5s;
-}
-
-.color-change:hover {
-color: #17161e;
-border: 1px solid lightslategray;
-}
-
-button.color-change {
--webkit-appearance: none;
--moz-appearance: none;
-}
-
-#reportsBtn {
-
-float: left;
-}
-
-#settingsBtn {
-
-float: right;
-}
-
-.columns {
-
-margin: 50px;
-}
-
-
-
-
-
-
-
-
-
-
-
