--- a/public/css/style.css
+++ b/public/css/style.css
@@ -193,5 +193,17 @@ button.color-change {
   margin-top: 15%;
 }
 
+#borderForData{
+
+  font-size: 30px;
+  color: rgb(200, 200, 200);
+}
+
+#departmentList{
+
+  background-color: rgb(0, 114, 175);
+  color: white;
+}
+
 
 
