--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,11 @@
 
 #logoImage {
 
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 125px;
-        zoom: 1;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 125px;
+  zoom: 1;
 }
 
 * {
@@ -121,6 +121,7 @@
 	letter-spacing: 1px;
 	opacity: 0.5;
 }
+
 #hastylink:hover {
 	opacity: 1
 }
@@ -208,8 +209,14 @@ button.color-change {
 #searchEmployees{
 
   background-color: rgb(0, 114, 175);
-
 }
 
+#welcomeText{
+
+  color: rgb(0, 114, 175);
+  font-size: 50px;
+  text-align: center;
+  border: 10px solid white;
+}
 
 
