--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,17 +216,26 @@ button.color-change {
   color: rgb(0, 114, 175);
   font-size: 50px;
   padding-left: 5%;
-  border: 10px solid grey;
+  
 }
 
 .move{
 
-  margin-left: 8%;
+ margin-right: 5px;
+ margin-left: 6%;
+  
 }
 
-#pleaseMove{
+#welcomeText{
 
-  margin: 50px;
+  padding: 10%;
+  
 }
 
+#searchEmployees{
 
+  font-size: 25px;
+  text-align: center;
+  color: black;
+  
+}
